Licensing/WinLicenseSDK/Include/C/WinlicenseSDK.h

// ***********************************************
// WinLicense typedef definitions
// ***********************************************

typedef struct _sLicenseFeatures 
{ 
    unsigned    cb;                     // size of struct
    unsigned    NumDays;                // expiration days
    unsigned    NumExec;                // expiration executions
    SYSTEMTIME  ExpDate;                // expiration date 
    unsigned    CountryId;              // country ID
    unsigned    Runtime;                // expiration runtime
    unsigned    GlobalMinutes;          // global time expiration
    SYSTEMTIME  InstallDate;            // Date to install the license since it was created
    unsigned    NetInstances;           // Network instances 
    unsigned    EmbedLicenseInfoInKey;  // for Dynamic SmartKeys, it embeds Name+Company+Custom inside generated SmartKey
    unsigned    EmbedCreationDate;      // Embed the date that the key was created
} sLicenseFeatures;
int STDCALL_CONVENTION WLGenTrialExtensionFileKey(char* TrialHash, int Level,\
                                         int NumDays, int NumExec, SYSTEMTIME* NewDate, int NumMinutes,\
                                         int TimeRuntime, char* BufferOut);
int STDCALL_CONVENTION WLGenPassword(char* TrialHash, char* Name, char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseFileKey(char* LicenseHash, char* UserName, char* Organization,\
                                  char* CustomData, char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, \
                                  int CountryId, int Runtime, int GlobalMinutes, char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseFileKeyW(const wchar_t* LicenseHash, const wchar_t* UserName, const wchar_t* Organization,\
                                   const wchar_t* CustomData, const wchar_t* MachineID, int NumDays, int NumExec,\
                                   SYSTEMTIME* NewDate, int CountryId, int Runtime, int GlobalMinutes, char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseFileKeyEx(const char* LicenseHash, const char* UserName, const char* Organization,\
                                    const char* CustomData, const char* MachineID, sLicenseFeatures* LicenseFeatures,\
                                    char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseFileKeyExW(const wchar_t* LicenseHash, const wchar_t* UserName, const wchar_t* Organization,\
                                     const wchar_t* CustomData, const wchar_t* MachineID, sLicenseFeatures* LicenseFeatures,\
                                     char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseRegistryKey(char* LicenseHash, char* UserName, char* Organization,\
                                      char* CustomData, char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate,\
                                      int CountryId, int Runtime, int GlobalMinutes, char* KeyName, char* KeyValueName,\
                                      char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseRegistryKeyW(const wchar_t* LicenseHash, const wchar_t* UserName, const wchar_t* Organization,\
                                       const wchar_t* CustomData, const wchar_t* MachineID, int NumDays, int NumExec,\
                                       SYSTEMTIME* NewDate, int CountryId, int Runtime, int GlobalMinutes,\
                                       const wchar_t* KeyName, const wchar_t* KeyValueName, char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseTextKey(char* LicenseHash, char* UserName, char* Organization, char* CustomData,\
                                  char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate,\
                                  int CountryId, int Runtime, int GlobalMinutes, char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseTextKeyW(const wchar_t* LicenseHash, const wchar_t* UserName, const wchar_t* Organization,\
                                   const wchar_t* CustomData, const wchar_t* MachineID, int NumDays, int NumExec,\
                                   SYSTEMTIME* NewDate, int CountryId, int Runtime, int GlobalMinutes, wchar_t* BufferOut);
int STDCALL_CONVENTION WLGenLicenseTextKeyEx(const char* LicenseHash, const char* UserName, const char* Organization,\
                                    const char* CustomData, const char* MachineID, sLicenseFeatures* LicenseFeatures,\
                                    char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseTextKeyExW(const wchar_t* LicenseHash, const wchar_t* UserName, const wchar_t* Organization,\
                                     const wchar_t* CustomData, const wchar_t* MachineID, sLicenseFeatures* LicenseFeatures,\
                                     wchar_t* BufferOut);
int STDCALL_CONVENTION WLGenLicenseSmartKey(char* LicenseHash, char* UserName, char* Organization, char* CustomData,\
                                   char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseSmartKeyW(wchar_t* LicenseHash, wchar_t* UserName, wchar_t* Organization, wchar_t* CustomData,\
                                    wchar_t* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, wchar_t* BufferOut);
int STDCALL_CONVENTION WLGenLicenseDynSmartKey(const char* LicenseHash, const char* UserName, const char* Organization,\
                                      const char* CustomData, const char* MachineID, sLicenseFeatures* LicenseFeatures,\
                                      char* BufferOut);
int STDCALL_CONVENTION WLGenLicenseDynSmartKeyW(const wchar_t* LicenseHash, const wchar_t* UserName, const wchar_t* Organization,\
                                       const wchar_t* CustomData, const wchar_t* MachineID, sLicenseFeatures* LicenseFeatures,\
                                       wchar_t* BufferOut);
int STDCALL_CONVENTION WLRegTotalExecutions(void);
int STDCALL_CONVENTION WLRegTotalDays(void);
BOOL STDCALL_CONVENTION WLHardwareGetID(char* pHardwareId);
BOOL STDCALL_CONVENTION WLHardwareCheckID(char* pHardwareId);
BOOL STDCALL_CONVENTION WLRegSmartKeyInstallToRegistry(const char* UserName, const char* Organization, const char* Custom,\
                                              const char* AsciiKey);
BOOL STDCALL_CONVENTION WLRegSmartKeyInstallToRegistryW(const wchar_t* UserName, const wchar_t* Organization, const wchar_t* Custom,\
                                               const wchar_t* AsciiKey);
BOOL STDCALL_CONVENTION WLRestartApplication(void);
BOOL STDCALL_CONVENTION WLHardwareGetFormattedID(int BlockCharSize, int Uppercase, char* Buffer);
BOOL STDCALL_CONVENTION WLPasswordCheck(char* UserName, char* Password);
BOOL STDCALL_CONVENTION WLRestartApplicationArgs(char* pArgs);
int STDCALL_CONVENTION WLGetCurrentCountry(void);
void STDCALL_CONVENTION WLSplashHide(void);
void STDCALL_CONVENTION WLBufferCrypt(void* Buffer, int BufferLength, char* Password);
void STDCALL_CONVENTION WLBufferDecrypt(void* Buffer, int BufferLength, char* Password);
BOOL STDCALL_CONVENTION WLRegSmartKeyInstallToFileInFolderW(const wchar_t* UserName, const wchar_t* Organization, const wchar_t* Custom,\
                                                  const wchar_t* UnicodeKey, const wchar_t* FilePath);
BOOL STDCALL_CONVENTION WLHardwareRuntimeCheckU3(void);
void STDCALL_CONVENTION WLGetVersion(char* Buffer);
void STDCALL_CONVENTION WLGetProtectionDate(SYSTEMTIME* pProtectionDate);
BOOL STDCALL_CONVENTION WLProtectCheckCodeIntegrity(void);
int STDCALL_CONVENTION WLHardwareGetIdType(void);
BOOL STDCALL_CONVENTION WLCheckVirtualPC(void);
BOOL STDCALL_CONVENTION WLHardwareGetIDW(wchar_t * pHardwareId);
int STDCALL_CONVENTION WLHardwareGetNumberUsbDrives(void);
BOOL STDCALL_CONVENTION WLHardwareGetUsbIdAt(int Index, char* pHardwareId);
BOOL STDCALL_CONVENTION WLHardwareGetUsbIdAtW(int Index, wchar_t* pHardwareId);
BOOL STDCALL_CONVENTION WLHardwareGetUsbNameAt(int Index, char* pUsbName);
BOOL STDCALL_CONVENTION WLHardwareGetUsbNameAtW(int Index, wchar_t* pUsbName);